tests/fixtures/invalid/pow_bool_dict_int.py
# Cannot call pow() with Bool, Dict[str, int], Int
x = pow(True, {"a": 1}, 1)
